--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -52,7 +52,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\GotoSceneOnClick.cs" />
     <Compile Include="Assets\Modules\umm@assetbundle_management\Scripts\UnityModule\AssetBundleManagement\Constants.cs" />
     <Compile Include="Assets\Modules\umm@assetbundle_management\Scripts\UnityModule\AssetBundleManagement\DownloadableProjectContext.cs" />
     <Compile Include="Assets\Modules\umm@assetbundle_management\Scripts\UnityModule\AssetBundleManagement\Enumerates.cs" />
@@ -343,6 +342,8 @@
     <Compile Include="Assets\Modules\umm@unirx\Scripts\UnityWinRTBridge\ThreadPoolScheduler_UnityWinRT.cs" />
     <Compile Include="Assets\Modules\umm@unirx_observablelifecyclemonobehaviour\Scripts\UniRx\UnityEngineBridge\ObservableLifecycleMonoBehaviour.cs" />
     <Compile Include="Assets\Modules\umm@unirx_observableunitywebrequest\Scripts\UniRx\UnityEngineBridge\ObservableUnityWebRequest.cs" />
+    <Compile Include="Assets\Scripts\GotoSceneOnClick.cs" />
+    <Compile Include="Assets\Scripts\Timer.cs" />
     <None Include="Assets\Modules\umm@cafu_generator\Templates\Class\Data\Entity.txt" />
     <None Include="Assets\Modules\umm@cafu_generator\Templates\Partial\MonoBehaviour.Start.txt" />
     <None Include="Assets\Modules\umm@cafu_generator\Templates\Class\Domain\Model.txt" />
@@ -914,6 +915,16 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <ItemGroup>
+    <Reference Include="UnityEditor.iOS.Extensions.Xcode">
+      <HintPath>/Applications/Unity/PlaybackEngines/iOSSupport/UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="UnityEditor.iOS.Extensions.Common">
+      <HintPath>/Applications/Unity/PlaybackEngines/iOSSupport/UnityEditor.iOS.Extensions.Common.dll</HintPath>
+    </Reference>
+  </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEditor.iOS.Extensions.Xcode">
       <HintPath>/Applications/Unity/PlaybackEngines/iOSSupport/UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
