--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -343,22 +343,25 @@
     <Compile Include="Assets\Modules\umm@unirx_observablelifecyclemonobehaviour\Scripts\UniRx\UnityEngineBridge\ObservableLifecycleMonoBehaviour.cs" />
     <Compile Include="Assets\Modules\umm@unirx_observableunitywebrequest\Scripts\UniRx\UnityEngineBridge\ObservableUnityWebRequest.cs" />
     <Compile Include="Assets\Scripts\Data\Entity\ProjectContextEntity.cs" />
+    <Compile Include="Assets\Scripts\Domain\Model\LoadingOrder.cs" />
     <Compile Include="Assets\Scripts\Domain\Model\Mogura.cs" />
     <Compile Include="Assets\Scripts\Domain\Model\Timer.cs" />
     <Compile Include="Assets\Scripts\Domain\UseCase\GameUseCase.cs" />
-    <Compile Include="Assets\Scripts\Domain\UseCase\HogeUseCase.cs" />
+    <Compile Include="Assets\Scripts\Domain\UseCase\LoadingOrderUseCase.cs" />
+    <Compile Include="Assets\Scripts\Domain\UseCase\LoadingUseCase.cs" />
     <Compile Include="Assets\Scripts\Domain\UseCase\MoguraUseCase.cs" />
     <Compile Include="Assets\Scripts\Domain\UseCase\TimerUseCase.cs" />
     <Compile Include="Assets\Scripts\Domain\UseCase\TopUseCase.cs" />
-    <Compile Include="Assets\Scripts\GotoSceneOnClick.cs" />
-    <Compile Include="Assets\Scripts\Presentation\Presenter\FugaPresenter.cs" />
+    <Compile Include="Assets\Scripts\Presentation\Presenter\ Presenter.cs" />
     <Compile Include="Assets\Scripts\Presentation\Presenter\GamePresenter.cs" />
-    <Compile Include="Assets\Scripts\Presentation\Presenter\HogePresenter.cs" />
+    <Compile Include="Assets\Scripts\Presentation\Presenter\InitPresenter.cs" />
+    <Compile Include="Assets\Scripts\Presentation\Presenter\LoadingPresenter.cs" />
     <Compile Include="Assets\Scripts\Presentation\Presenter\ResultPresenter.cs" />
     <Compile Include="Assets\Scripts\Presentation\Presenter\TopPresenter.cs" />
-    <Compile Include="Assets\Scripts\Presentation\View\Fuga\Controller.cs" />
     <Compile Include="Assets\Scripts\Presentation\View\Game\Controller.cs" />
-    <Compile Include="Assets\Scripts\Presentation\View\Hoge\Controller.cs" />
+    <Compile Include="Assets\Scripts\Presentation\View\Init\Controller.cs" />
+    <Compile Include="Assets\Scripts\Presentation\View\Loading\Controller.cs" />
+    <Compile Include="Assets\Scripts\Presentation\View\MoguraInit\Controller.cs" />
     <Compile Include="Assets\Scripts\Presentation\View\Result\Controller.cs" />
     <Compile Include="Assets\Scripts\Presentation\View\Top\Controller.cs" />
     <None Include="Assets\Modules\umm@cafu_generator\Templates\Class\Data\Entity.txt" />
