save high score

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -342,14 +342,21 @@
     <Compile Include="Assets\Modules\umm@unirx\Scripts\UnityWinRTBridge\ThreadPoolScheduler_UnityWinRT.cs" />
     <Compile Include="Assets\Modules\umm@unirx_observablelifecyclemonobehaviour\Scripts\UniRx\UnityEngineBridge\ObservableLifecycleMonoBehaviour.cs" />
     <Compile Include="Assets\Modules\umm@unirx_observableunitywebrequest\Scripts\UniRx\UnityEngineBridge\ObservableUnityWebRequest.cs" />
+    <Compile Include="Assets\Scripts\Data\DataStore\ScoreDataStore.cs" />
     <Compile Include="Assets\Scripts\Data\Entity\ProjectContextEntity.cs" />
+    <Compile Include="Assets\Scripts\Data\Entity\ScoreEntity.cs" />
     <Compile Include="Assets\Scripts\Domain\Model\LoadingOrder.cs" />
     <Compile Include="Assets\Scripts\Domain\Model\Mogura.cs" />
+    <Compile Include="Assets\Scripts\Domain\Model\Ranking.cs" />
+    <Compile Include="Assets\Scripts\Domain\Model\Score.cs" />
     <Compile Include="Assets\Scripts\Domain\Model\Timer.cs" />
+    <Compile Include="Assets\Scripts\Domain\Repository\ScoreRepository.cs" />
+    <Compile Include="Assets\Scripts\Domain\Translator\ScoreTranslator.cs" />
     <Compile Include="Assets\Scripts\Domain\UseCase\GameUseCase.cs" />
     <Compile Include="Assets\Scripts\Domain\UseCase\LoadingOrderUseCase.cs" />
     <Compile Include="Assets\Scripts\Domain\UseCase\LoadingUseCase.cs" />
     <Compile Include="Assets\Scripts\Domain\UseCase\MoguraUseCase.cs" />
+    <Compile Include="Assets\Scripts\Domain\UseCase\RankingUseCase.cs" />
     <Compile Include="Assets\Scripts\Domain\UseCase\TimerUseCase.cs" />
     <Compile Include="Assets\Scripts\Domain\UseCase\TopUseCase.cs" />
     <Compile Include="Assets\Scripts\Presentation\Presenter\GamePresenter.cs" />
@@ -360,7 +367,6 @@
     <Compile Include="Assets\Scripts\Presentation\View\Game\Controller.cs" />
     <Compile Include="Assets\Scripts\Presentation\View\Init\Controller.cs" />
     <Compile Include="Assets\Scripts\Presentation\View\Loading\Controller.cs" />
-    <Compile Include="Assets\Scripts\Presentation\View\MoguraInit\Controller.cs" />
     <Compile Include="Assets\Scripts\Presentation\View\Result\Controller.cs" />
     <Compile Include="Assets\Scripts\Presentation\View\Top\Controller.cs" />
     <None Include="Assets\Modules\umm@cafu_generator\Templates\Class\Data\Entity.txt" />
