Ranking scene created.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -357,16 +357,19 @@
     <Compile Include="Assets\Scripts\Domain\UseCase\LoadingUseCase.cs" />
     <Compile Include="Assets\Scripts\Domain\UseCase\MoguraUseCase.cs" />
     <Compile Include="Assets\Scripts\Domain\UseCase\RankingUseCase.cs" />
+    <Compile Include="Assets\Scripts\Domain\UseCase\ResultUseCase.cs" />
     <Compile Include="Assets\Scripts\Domain\UseCase\TimerUseCase.cs" />
     <Compile Include="Assets\Scripts\Domain\UseCase\TopUseCase.cs" />
     <Compile Include="Assets\Scripts\Presentation\Presenter\GamePresenter.cs" />
     <Compile Include="Assets\Scripts\Presentation\Presenter\InitPresenter.cs" />
     <Compile Include="Assets\Scripts\Presentation\Presenter\LoadingPresenter.cs" />
+    <Compile Include="Assets\Scripts\Presentation\Presenter\RankingPresenter.cs" />
     <Compile Include="Assets\Scripts\Presentation\Presenter\ResultPresenter.cs" />
     <Compile Include="Assets\Scripts\Presentation\Presenter\TopPresenter.cs" />
     <Compile Include="Assets\Scripts\Presentation\View\Game\Controller.cs" />
     <Compile Include="Assets\Scripts\Presentation\View\Init\Controller.cs" />
     <Compile Include="Assets\Scripts\Presentation\View\Loading\Controller.cs" />
+    <Compile Include="Assets\Scripts\Presentation\View\Ranking\Controller.cs" />
     <Compile Include="Assets\Scripts\Presentation\View\Result\Controller.cs" />
     <Compile Include="Assets\Scripts\Presentation\View\Top\Controller.cs" />
     <None Include="Assets\Modules\umm@cafu_generator\Templates\Class\Data\Entity.txt" />
